# GOP-Pirate-Edition

./: GOP - Pirate Edition.lnk  README.txt
gop - pirate edition/: CMakeLists.txt  main.cpp  modifiche.txt
gop - pirate edition/include/: Auxiliary_functions.h  Carta.h  Casella.h  GOP.h  Giocatore.h
gop - pirate edition/src/: Carta.cpp  Casella.cpp  Dado.cpp  GOP.cpp  General_functions.cpp  Giocatore.cpp  Graphics.cpp  Tabellone.cpp
